--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <!-- Container (The Band Section) -->
  <main role="main" class="container pt-0">
 <div id="band" class="text-center">
-  <h1 class="text-black"><p><em><b>"Музыка и наши фанаты — это больше чем жизнь"</b></em></p></h1>
+  <h1 style="color: black"><p><em><b>"Музыка и наши фанаты — это больше чем жизнь"</b></em></p></h1>
   <b><p>Imagine Dragons (дословно «Вообрази драконов») — американская инди-группа, образованная в Лас-Вегасе в 2008 году. Стали известны после выпуска дебютного студийного альбома Night Visions в сентябре 2012 года. Американский журнал Billboard назвал их самыми яркими новыми звёздами 2013 года и самой большой группой 2017 года, а журнал Rolling Stone назвал их сингл «Radioactive» самым большим рок-хитом года</p></b>
   <br>
   <div class="container">
