--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <div class="row">
  <div class="col-md-6">
        <h3><strong> Origins</strong></h3>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Bad Liar.mp3" controls></audio>
+       <embed src="D:\Учні\11\Курси\Купчик\Music\Origins\Bad Liar.mp3" controls></embed>
          <p class="text-center">Bad Liar</p>
        <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
