--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
  <div class="col-md-6">
        <h3><strong> Origins</strong></h3>
          <audio controls>
-          <source src="D:\Учні\11\Курси\Купчик\Music\Origins\Bad Liar.mp3">
+          <source src="Music\Origins\Bad Liar.mp3">
          </audio>
          <p class="text-center">Bad Liar</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Birds.mp3" controls></audio>
+       <audio src="Music\Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Boomerang.mp3" controls></audio>
+       <audio src="Music\Origins\Boomerang.mp3" controls></audio>
          <p class="text-center">Boomerang</p>
        <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Bullet In A Gun.mp3" controls></audio>
          <p class="text-center">Bullet In A Gun</p>
