--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
           <source src="Music\Origins\Bad Liar.mp3">
          </audio>
          <p class="text-center">Bad Liar</p>
-       <audio src="Music\Origins\Birds.mp3" controls></audio>
+       <audio src="Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
-       <audio src="Music\Origins\Boomerang.mp3" controls></audio>
+       <audio src="Origins\Boomerang.mp3" controls></audio>
          <p class="text-center">Boomerang</p>
        <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Bullet In A Gun.mp3" controls></audio>
          <p class="text-center">Bullet In A Gun</p>
