--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
          <p class="text-center">Bad Liar</p>
        <audio src="Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
-       <audio src="Origins\Boomerang.mp3" controls></audio>
+       <audio src="Music\Origins\Boomerang.mp3" controls></audio>
          <p class="text-center">Boomerang</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Bullet In A Gun.mp3" controls></audio>
+       <audio src="Bullet In A Gun.mp3" controls></audio>
          <p class="text-center">Bullet In A Gun</p>
        <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Burn Out.mp3" controls></audio>
          <p class="text-center">Burn Out</p>
