--- a/index.html
+++ b/index.html
@@ -357,70 +357,68 @@
     <div class="row">
  <div class="col-md-6">
        <h3><strong> Origins</strong></h3>
-         <audio controls>
-          <source src="Music\Origins\Bad Liar.mp3">
-         </audio>
+       <audio src="Music\Origins\Bad Liar.mp3" controls></audio>
          <p class="text-center">Bad Liar</p>
-       <audio src="Origins\Birds.mp3" controls></audio>
+       <audio src="Music\Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
        <audio src="Music\Origins\Boomerang.mp3" controls></audio>
          <p class="text-center">Boomerang</p>
-       <audio src="Bullet In A Gun.mp3" controls></audio>
+       <audio src="Music\Origins\Bullet In A Gun.mp3" controls></audio>
          <p class="text-center">Bullet In A Gun</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Burn Out.mp3" controls></audio>
+       <audio src="Music\Origins\Burn Out.mp3" controls></audio>
          <p class="text-center">Burn Out</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Cool Out.mp3" controls></audio>
+       <audio src="Music\Origins\Cool Out.mp3" controls></audio>
          <p class="text-center">Cool Out</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Digital.mp3" controls></audio>
+       <audio src="Music\Origins\Digital.mp3" controls></audio>
          <p class="text-center">Digital</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Love.mp3" controls></audio>
+       <audio src="Music\Origins\Love.mp3" controls></audio>
          <p class="text-center">Love</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Machine.mp3" controls></audio>
+       <audio src="Music\Origins\Machine.mp3" controls></audio>
          <p class="text-center">Machine</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Natural.mp3" controls></audio>
+       <audio src="Music\Origins\Natural.mp3" controls></audio>
          <p class="text-center">Natural</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Only.mp3" controls></audio>
+       <audio src="Music\Origins\Only.mp3" controls></audio>
          <p class="text-center">Only</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Real Life.mp3" controls></audio>
+       <audio src="Music\Origins\Real Life.mp3" controls></audio>
          <p class="text-center">Real Life</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Stuck.mp3" controls></audio>
+       <audio src="Music\Origins\Stuck.mp3" controls></audio>
          <p class="text-center">Stuck</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\West Coast.mp3" controls></audio>
+       <audio src="Music\Origins\West Coast.mp3" controls></audio>
          <p class="text-center">West Coast</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Origins\Zero.mp3" controls></audio>
+       <audio src="Music\Origins\Zero.mp3" controls></audio>
          <p class="text-center">Zero</p>
  </div>
  <div class="col-md-6">
        <h3><strong> Evlove</strong></h3>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\I Don't Know Why.mp3" controls></audio>
+       <audio src="Music\Evolve\I Don't Know Why.mp3" controls></audio>
          <p class="text-center">I Don't Know Why</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Thunder.mp3" controls></audio>
+       <audio src="Music\Evolve\Thunder.mp3" controls></audio>
          <p class="text-center">Thunder</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Whatever It Takes.mp3" controls></audio>
+       <audio src="Music\Evolve\Whatever It Takes.mp3" controls></audio>
          <p class="text-center">Whatever It Takes</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Believer.mp3" controls></audio>
+       <audio src="Music\Evolve\Believer.mp3" controls></audio>
          <p class="text-center">Believer</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Dancing In The Dark.mp3" controls></audio>
+       <audio src="Music\Evolve\Dancing In The Dark.mp3" controls></audio>
          <p class="text-center">Dancing In The Dark</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\I'll Make It Up To You.mp3" controls></audio>
+       <audio src="Music\Evolve\I'll Make It Up To You.mp3" controls></audio>
          <p class="text-center">I'll Make It Up To You</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Levitate.mp3" controls></audio>
+       <audio src="Music\Evolve\Levitate.mp3" controls></audio>
          <p class="text-center">Levitate</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Mouth Of The River.mp3" controls></audio>
+       <audio src="Music\Evolve\Mouth Of The River.mp3" controls></audio>
          <p class="text-center">Mouth Of The River</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Next To Me.mp3" controls></audio>
+       <audio src="Music\Evolve\Next To Me.mp3" controls></audio>
          <p class="text-center">Next To Me</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Not Today.mp3" controls></audio>
+       <audio src="Music\Evolve\Not Today.mp3" controls></audio>
          <p class="text-center">Not Today</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Rise Up.mp3" controls></audio>
+       <audio src="Music\Evolve\Rise Up.mp3" controls></audio>
          <p class="text-center">Rise Up</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Roots.mp3" controls></audio>
+       <audio src="Music\Evolve\Roots.mp3" controls></audio>
          <p class="text-center">Roots</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Start Over.mp3" controls></audio>
+       <audio src="Music\Evolve\Start Over.mp3" controls></audio>
          <p class="text-center">Start Over</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Walking The Wire.mp3" controls></audio>
+       <audio src="Music\Evolve\Walking The Wire.mp3" controls></audio>
          <p class="text-center">Walking The Wire</p>
-       <audio src="D:\Учні\11\Курси\Купчик\Music\Evolve\Yesterday.mp3" controls></audio>
+       <audio src="Music\Evolve\Yesterday.mp3" controls></audio>
          <p class="text-center">Yesterday</p>
  </div>
  <div class="col-md-6">
