--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
  <div class="col-md-6">
        <h3><strong> Origins</strong></h3>
          <audio controls>
-          <source src="D:\Учні\11\Курси\Купчик\Music\Origins\Bad Liar.mp3">
+          <source src="Music\Origins\Bad Liar.mp3">
          </audio>
          <p class="text-center">Bad Liar</p>
        <audio src="Music\Origins\Birds.mp3" controls></audio>
