--- a/index.html
+++ b/index.html
@@ -363,9 +363,7 @@
     <div class="row">
  <div class="col-md-6">
        <h3><strong> Origins</strong></h3>
-         <audio controls>
-          <source src="Music\Origins\Bad Liar.mp3">
-         </audio>
+       <audio src="Music\Origins\Bad Liar.mp3" controls></audio>
          <p class="text-center">Bad Liar</p>
        <audio src="Music\Origins\Birds.mp3" controls></audio>
          <p class="text-center">Birds</p>
@@ -375,7 +373,7 @@
          <p class="text-center">Bullet In A Gun</p>
        <audio src="Music\Origins\Burn Out.mp3" controls></audio>
          <p class="text-center">Burn Out</p>
-       <audio src="Origins\Cool Out.mp3" controls></audio>
+       <audio src="Music\Origins\Cool Out.mp3" controls></audio>
          <p class="text-center">Cool Out</p>
        <audio src="Music\Origins\Digital.mp3" controls></audio>
          <p class="text-center">Digital</p>
