--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
          <p class="text-center">Machine</p>
        <audio src="Music\Origins\Natural.mp3" controls></audio>
          <p class="text-center">Natural</p>
-       <audio src=Music\Origins\Only.mp3" controls></audio>
+       <audio src="Music\Origins\Only.mp3" controls></audio>
          <p class="text-center">Only</p>
        <audio src="Music\Origins\Real Life.mp3" controls></audio>
          <p class="text-center">Real Life</p>
