--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 </main>
 
 <!-- Container (TOUR Section) -->
-  <main role="main" class="container"></main>
+  <main role="main" class="container">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
@@ -332,17 +332,17 @@
       <p class="text-center">Ты должен быть хладнокровным,<br>Чтобы добиться успеха в этом мире!</p>
     <div class="row text-center">
       <div class="col-md-4 ">
-       <iframe width="400" height="500" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       <div class="col-md-4">
-       <iframe width="500" height="300" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="col-md-4">
-       <iframe width="550" height="400" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>       
       </div>
  </div>
- 
+    
   <div class="container">
     <div class="row my-5">
       <div class="col-md-4">
