--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 <div class="col-md-6 ">
   
       <a href="#demo1" data-toggle="collapse">
-        <img src="images/24.jpg" class="img-circle " alt="Дэн Рейнольдс" width="255" height="255">
+        <img src="images/24.jpg" class="img-circle " alt="Evolve" width="255" height="255">
       </a>
       <div id="demo1" class="collapse">
        <audio src="Music\Evolve\I Don't Know Why.mp3" controls></audio>
@@ -441,7 +441,7 @@
  <div class="col-md-6">
    
       <a href="#demo2" data-toggle="collapse">
-        <img src="images/23.jpg" class="img-circle" alt="Дэн Рейнольдс" width="255" height="255">
+        <img src="images/23.jpg" class="img-circle" alt="Smoke + Mirrors" width="255" height="255">
       </a>
 <div id="demo2" class="collapse">
        <audio src="Music\Smoke + Mirrors\Battle Cry.m4a" controls></audio>
@@ -489,7 +489,7 @@
   <div class="col-md-6">
       
       <a href="#demo3" data-toggle="collapse">
-        <img src="images/22.jpg" class="img-circle " alt="Дэн Рейнольдс" width="255" height="255">
+        <img src="images/22.jpg" class="img-circle " alt="Night Visions" width="255" height="255">
       </a>
  <div id="demo3" class="collapse">   
        <audio src="Music\Night Visions\Radioactive.m4a" controls></audio>
