--- a/index.html
+++ b/index.html
@@ -167,20 +167,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#myPage">ГЛАВНАЯ</a></li>
         <li><a href="#band">ГРУППА</a></li>
         <li><a href="#contact">КОНТАКТ</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">БОЛЬШЕЕ
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Товар</a></li>
-            <li><a href="#">Дополнительно</a></li>
-            <li><a href="#">СМИ</a></li> 
+            <li><a href="#Music">КЛИПЫ</a></li>
+            <li><a href="#audio">АЛЬБОМЫ</a></li> 
           </ul>
-        </li>
-        <li><a href="#">ПОИСК<span class="glyphicon glyphicon-search"></span></a></li>
-      </ul>
     </div>
  </div> 
       <div class="l-branding">
@@ -239,7 +230,7 @@
 
 <!-- Container (The Band Section) -->
  <main role="main" class="container pt-0">
-<div id="band" class="text-center">
+<div class="text-center">
   <h1 style="color: black"><p><em><b>"Музыка и наши фанаты — это больше чем жизнь"</b></em></p></h1>
   <b><p>Imagine Dragons (дословно «Вообрази драконов») — американская инди-группа, образованная в Лас-Вегасе в 2008 году. Стали известны после выпуска дебютного студийного альбома Night Visions в сентябре 2012 года. Американский журнал Billboard назвал их самыми яркими новыми звёздами 2013 года и самой большой группой 2017 года, а журнал Rolling Stone назвал их сингл «Radioactive» самым большим рок-хитом года</p></b>
   <br>
@@ -315,28 +306,46 @@
       <div class="col-md-4">
         <hr>
       </div>
-      <div class="col-md-4">
-        <h3 class="text-center text-uppercase my-0" style="color: grey">клипы</h3>
+      <div class="col-md-4 " >
+        <h3 class="text-center text-uppercase my-0" style="color: grey" id="Music">клипы</h3>
       </div>
       <div class="col-md-4">
         <hr>
       </div>
     </div>
   </div>
+  <p>
   <div class="container.row" style="float: center">
-      <p class="text-center">Ты должен быть хладнокровным,<br>Чтобы добиться успеха в этом мире!</p>
+     <strong> <p class="text-center">Ты должен быть хладнокровным,<br>Чтобы добиться успеха в этом мире!</p></strong>
     <div class="row text-center">
+      <div class="col-md-4">
+       <iframe width="350" height="200" src="https://www.youtube.com/embed/7wtfhZwyrcc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
       <div class="col-md-4 ">
-       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="350" height="200" src="https://www.youtube.com/embed/0I647GU3Jsc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       <div class="col-md-4">
-       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="350" height="200" src="https://www.youtube.com/embed/I-QfPUz1es8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>        
+     </div>
+  </div>
+</p>
+<p>
+<div class="container.row" style="float: center">
+    <div class="row text-center">
+      <div class="col-md-4">
+       <iframe width="350" height="200" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
+      <div class="col-md-4 ">
+       <iframe width="350" height="200" src="https://www.youtube.com/embed/gOsM-DYAEhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-md-4">
-       <iframe width="300" height="200" src="https://www.youtube.com/embed/EIh9U-iUXEw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>        
-      </div>
- </div>
+      <div class="col-md-4">
+        <iframe width="350" height="200" src="https://www.youtube.com/embed/mWRsgZuwf_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>        
+     </div>
+  </div>
+</p>
+</main>
  
   <div class="container">
     
@@ -344,7 +353,7 @@
         <hr>
       </div>
       <div class="col-md-4">
-        <h3 class="text-center text-uppercase my-0" style="color: grey"><b>альбомы</b></h3>
+        <h3 class="text-center text-uppercase my-0" style="color: grey" id="audio"><b>альбомы</b></h3>
       </div>
       <div class="col-md-4">
         <hr>
@@ -397,7 +406,7 @@
 <div class="col-md-6 ">
   
       <a href="#demo1" data-toggle="collapse">
-        <img src="images/24.jpg" class="img-circle " alt="Evolve" width="255" height="255">
+        <img src="images/24.jpg" class="img-circle " alt="Дэн Рейнольдс" width="255" height="255">
       </a>
       <div id="demo1" class="collapse">
        <audio src="Music\Evolve\I Don't Know Why.mp3" controls></audio>
@@ -441,7 +450,7 @@
  <div class="col-md-6">
    
       <a href="#demo2" data-toggle="collapse">
-        <img src="images/23.jpg" class="img-circle" alt="Smoke + Mirrors" width="255" height="255">
+        <img src="images/23.jpg" class="img-circle" alt="Дэн Рейнольдс" width="255" height="255">
       </a>
 <div id="demo2" class="collapse">
        <audio src="Music\Smoke + Mirrors\Battle Cry.m4a" controls></audio>
@@ -489,7 +498,7 @@
   <div class="col-md-6">
       
       <a href="#demo3" data-toggle="collapse">
-        <img src="images/22.jpg" class="img-circle " alt="Night Visions" width="255" height="255">
+        <img src="images/22.jpg" class="img-circle " alt="Дэн Рейнольдс" width="255" height="255">
       </a>
  <div id="demo3" class="collapse">   
        <audio src="Music\Night Visions\Radioactive.m4a" controls></audio>
@@ -547,7 +556,7 @@
         <hr>
       </div>
       <div class="col-md-4">
-        <h3 class="text-center text-uppercase my-0" style="color: grey">контакты</h3>
+        <h3 class="text-center text-uppercase my-0" style="color: grey" id="#contact" >контакты</h3>
       </div>
       <div class="col-md-4">
         <hr>
