--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
   body {
     font: 400 15px/1.8 Lato, sans-serif;
-    color: #777;
+    color: #ffffff;
   }
   h3, h4 {
     margin: 10px 0 30px 0;
@@ -107,9 +107,7 @@
     margin-bottom: 0;
     background-color: #2d2d30;
     border: 0;
-    font-size: 11px !important;
-    letter-spacing: 4px;
-    opacity: 0.9;
+    letter-spacing: 2px;
   }
   .navbar li a, .navbar .navbar-brand { 
     color: #d5d5d5 !important;
