--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
       <p>Можешь оставить комментарии</p>
       <p style="color: black"><span class="glyphicon glyphicon-map-marker"></span> Лас-Вегас, Невада, США,</p>
       <p style="color: black"><span class="glyphicon glyphicon-phone"></span> Phone: +380930058749</p>
-      <p style="color: black"><span class="glyphicon glyphicon-envelope"></span> Email: imaginedragons@gmail.com</p>
+      <p style="color: black"><span class="glyphicon glyphicon-envelope"></span> Email: kupchik07gmail.com</p>
     </div>
     <div class="col-md-8">        
       <div class="row">
